rewriterun cleanup